fixed voting controllers; added getUser(token);